fix spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -96,7 +96,8 @@ body{
 }
 #homeImage{
     margin-left: 25%;
-    margin-top: 15%;
+    margin-top: 20%;
+
 }
 
 
